# bank_infra_exercise

./: .dockerignore  .env.example  .gitignore  AI_USAGE_LOG.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  pyproject.toml  railway.toml
app/: config.py  database.py  dependencies.py  exceptions.py  main.py  security.py
app/models/: __init__.py  account.py  account_holder.py  card.py  transaction.py  user.py
app/routers/: account_holders.py  accounts.py  admin.py  auth.py  cards.py  statements.py  transactions.py  transfers.py
app/schemas/: account.py  account_holder.py  auth.py  card.py  statement.py  transaction.py  user.py
app/services/: account_service.py  auth_service.py  card_service.py  statement_service.py  transaction_service.py
demo/: README.md  promote_admin.py  seed.py
docs/: AI_USAGE_LOG.md  README.md  ROADMAP.md  SECURITY.md
frontend/: tailwind.config.ts  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/layouts/: AdminLayout.tsx  MemberLayout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: Index.tsx  Login.tsx  Signup.tsx
frontend/src/pages/admin/: Dashboard.tsx
frontend/src/pages/member/: Cards.tsx  Overview.tsx  Statements.tsx  Transfers.tsx
frontend/src/types/: api.ts
tests/: conftest.py  test_accounts.py  test_auth.py  test_authorization.py  test_cards.py  test_precision.py  test_statements.py  test_transactions.py  test_transfers.py
